# graph-drawer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md  algo.cpp  algo.h  graphIO.cpp  graphIO.h  main.cpp  planar.cpp  planar.h  shared.cpp  shared.h
drawer/: Makefile  README.md  README2.txt  animategraph.py  graph.txt  prog.cpp  randGraphGen.cpp  vizgraph.py
examples/: 0.json  1.json  Goldner_Harary  in1.txt  in4.txt  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt
io_test/: 0.json  1.json
test/: graph_test.cpp  hello_test.cpp  test_two.cpp
visualisation/: Makefile  randGraphGen.cpp  requirements.txt  vizgraph.py
